created build with gulp for js

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <li>
             <form class="form-inline" id="user-search">
               <input class="form-control" type="text" name="search" id="username-field">
-              <button class="btn btn-primary" type="submit" name="button">User Lookup</button>
+              <button class="btn btn-primary" type="submit" name="button"> Search GitUser </button>
             </form>
           </li>
         </ul>
